# Rogue

./: .gitignore  AppImageBuilder.yml  CMakeLists.txt  Ivec2.h  Makefile  README.md  Rogue-0.1.0-x86_64.AppImage.zsync  SDL_all.h  TODO  TODO.md  appimagetool-x86_64.AppImage:Zone.Identifier  debug.map  dungeon.map  game  issue.txt  rogue  test  test.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
1_R/src/: Dungeon.cpp  DungeonMenu.cpp  Game.cpp  Home.cpp  Start.cpp
2_R/: game
2_R/src/: 1_Start.cpp  1_Start.h  Game.cpp  Game.h
appimage-build/apt/: apt.conf  sources.list
assets/: 決定ボタンを押す38.mp3:Zone.Identifier
mock_sdl/: SDL.h
src/: 1_Start.cpp  1_Start.h  2_Home.cpp  2_Home.h  3_DungeonMenu.cpp  3_DungeonMenu.h  4_Dungeon.cpp  4_Dungeon.h  4_Dungeon_New.cpp  5_Congratulations.cpp  AStar.cpp  AreaDivide.cpp  Character.cpp  Dungeon.cpp  DungeonMenu.cpp  Enemy.cpp  Extern.cpp  Game.cpp  Game.h  Generator.cpp  Home.cpp  LTexture.cpp  Log.cpp  OSearch.cpp  Player.cpp  RRA.cpp  Start.cpp  Tile.cpp  main  main.cpp
src/Characters/: Character.cpp  Character.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
src/Core/: Game.cpp  Game.h  main.cpp
src/Functions/: Color.h  Math.cpp  Math.h  RectUtils.h  Texture.h  Util.h
src/GenerateDungeon/: AStar.cpp  AStar.h  Area.h  AreaDivide.cpp  AreaDivide.h  Character.cpp  Character.h  Const.h  Dungeon.h  Enemy.cpp  Enemy.h  Enum.h  GeneratePch.h  Generator.cpp  Generator.h  LTexture.h  OSearch.h  Player.cpp  Player.h  RRA.cpp  RRA.h  Room.h  Tile.h  common.h
src/Scene/: 1_Start.cpp  1_Start.h  2_Home.cpp  2_Home.h  3_DungeonMenu.h  4_Dungeon.cpp  4_Dungeon.h  5_Congratulations.cpp  5_Congratulations.h  6_GameOver.cpp  6_GameOver.h
src/System/: AStar.cpp  AStar.h  LTexture.cpp  LTexture.h
src/UI/: Button.h  HUD.h  Log.cpp  Log.h
src/Utils/: Color.h  Ivec2.h  (+2 more)
src_old/: 1_Start.cpp  2_Home.cpp  3_DungeonMenu.cpp  4_Dungeon.cpp  AreaDivide.cpp  Character.cpp  Enemy.cpp  Game.cpp  Game.h  Generator.cpp  Player.cpp  main.cpp
tests/: test_AinB.cpp  test_Player.cpp  test_util.cpp
(+82 files in other folders)
